syntax = "proto3";

package contracts.viz.v1;

option go_package = "chart-organizer/backend/gen/contracts/viz/v1;vizv1";

message ParallelCoordinates {
    string title = 1;
    repeated string columns = 2;
}

message Scatterplot {
    string title = 1;
    string column_x = 2;
    string column_y = 3;
}

message LinePlot {
    string title = 1;
    string column_x = 2;
    string column_y = 3;
}

message Visualization {
    string type = 1;
    oneof plot {
        ParallelCoordinates parallel_coordinates = 2;
        Scatterplot scatterplot = 3;
        LinePlot lineplot = 4;
    }
}

message CreateDashboardRequest {
    repeated Visualization visualizations = 1;
    string dataset_id = 2;
}

message CreateDashboardResponse {
    string id = 1;
}

message GetDashboardRequest {
    string id = 1;
}

message GetDashboardResponse {
    repeated Visualization visualizations = 1;
    string dataset_id = 2;
}

service DashboardService {
    rpc CreateDashboard(CreateDashboardRequest) returns (CreateDashboardResponse) {}
    rpc GetDashboard(GetDashboardRequest) returns (GetDashboardResponse) {}
}